Added links to other projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
-        <span class="d-none d-lg-block">
+        <span class="d-none d-lg-block" id="face">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
       </a>
@@ -44,6 +44,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -80,22 +83,6 @@
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/eenkelee">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/lisset-torres/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -104,7 +91,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/ltorres">
+              <a href="https://github.com/lisset2012">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -123,8 +110,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Web Developer</h3>
               <div class="subheading mb-3">TechLaunch Program</div>
-              <p>Learning all the new webs technologies that will built a well designed, fast and responsives web aplications so can be used
-                to solve vital problems in a wide tipes of business.
+              <p>Learning all the new web technologies that will build a well designed, fast and responsives web aplications so can be used
+                to solve vital problems in a wide types of business.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -142,13 +129,38 @@
               <span class="text-primary">September 2007 - September 2010</span>
             </div>
           </div>
-
-
-          
-
         </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <ul>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/music_boxes_starter/">Piano</a>
+            </li>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/invoice(factura)_app/">Invoices</a>
+            </li>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/gif_search_starter/">Gif search</a>
+            </li>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/tournament_starter/">Tournament</a>
+            </li>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/weather_app_starter/">Weather App</a>
+            </li>
+            <li>
+              <a href="http://ltorres.fvi-grad.com/wikipedia-app-starter/">Wiki App</a>
+            </li>
+          </ul>
+
+      </div>
 
       </section>
+
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
